# sip-protocol

./: .env.example  .eslintrc.js  .gitignore  .gitmodules  .solana-privacy-hack  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SDK-ROADMAP.md  SECURITY.md  codecov.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  typedoc.json
.changeset/: config.json  evm-view-only-scan.md  export-memo-prefix-constants.md  flow-privacy-primitives.md  gasless-cashout-relayer.md  langchain-v1-migration.md  privacy-tier-fee.md  solana-cashout-hardening.md  stealth-canonical-followups.md  yellowstone-v5-migration.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: changelog-sync.yml  ci.yml  deploy-demo.yml  docs-sync.yml  docs-validate.yml  mirror-gitlab.yml  publish.yml  release.yml
api/: README.md
api/classes/: BaseWalletAdapter.md  ComplianceManager.md  CryptoError.md  EncryptionNotImplementedError.md  EthereumWalletAdapter.md  HardwareWalletError.md  IntentBuilder.md  IntentError.md  LedgerWalletAdapter.md  MockEthereumAdapter.md  MockLedgerAdapter.md  MockProofProvider.md  MockSolanaAdapter.md  MockSolver.md  MockTrezorAdapter.md  MockWalletAdapter.md  NEARIntentsAdapter.md  NetworkError.md  NoirProofProvider.md  OneClickClient.md  PaymentBuilder.md  ProofError.md  ProofGenerationError.md  ProofNotImplementedError.md  SIP.md  SIPError.md  SolanaWalletAdapter.md  Treasury.md  TrezorWalletAdapter.md  ValidationError.md  WalletError.md  ZcashRPCClient.md  ZcashRPCError.md  ZcashShieldedService.md
api/enumerations/: ErrorCode.md  IntentStatus.md  OneClickDepositMode.md  OneClickErrorCode.md  OneClickSwapStatus.md  OneClickSwapType.md  PrivacyLevel.md
api/functions/: addBlindings.md  addCommitments.md  attachProofs.md  base58ToHex.md  checkStealthAddress.md  commit.md  commitZero.md  createCommitment.md  createEthereumAdapter.md  createLedgerAdapter.md  createMockEthereumAdapter.md  createMockEthereumProvider.md  createMockLedgerAdapter.md  createMockSolanaAdapter.md  createMockSolanaConnection.md  createMockSolanaProvider.md  createMockSolver.md  createMockTrezorAdapter.md  createNEARIntentsAdapter.md  createProductionSIP.md  createSIP.md  createShieldedIntent.md  createShieldedPayment.md  createSolanaAdapter.md  createTrezorAdapter.md  createWalletFactory.md  createZcashClient.md  createZcashShieldedService.md  decodeStealthMetaAddress.md  decryptMemo.md  decryptWithViewing.md  deriveStealthPrivateKey.md  deriveViewingKey.md  deserializeIntent.md  deserializePayment.md  detectEthereumWallets.md  detectSolanaWallets.md  encodeStealthMetaAddress.md  encryptForViewing.md  featureNotSupportedError.md  (+78 more)
api/interfaces/: Asset.md  AuditLogEntry.md  AuditScope.md  AuditorRegistration.md  AuditorViewingKey.md  BatchPaymentRecipient.md  BatchPaymentRequest.md  Commitment.md  CommitmentPoint.md  ComplianceConfig.md  ComplianceReport.md  CreateBatchProposalParams.md  CreateComplianceConfigParams.md  CreateIntentOptions.md  CreateIntentParams.md  CreatePaymentOptions.md  CreatePaymentParams.md  CreatePaymentProposalParams.md  CreateTreasuryParams.md  DisclosedTransaction.md  DisclosureRequest.md  EIP1193ConnectInfo.md  EIP1193Provider.md  EIP1193ProviderRpcError.md  EIP1193RequestArguments.md  EIP712Domain.md  EIP712TypeDefinition.md  EIP712TypedData.md  EIP712Types.md  EthereumAdapterConfig.md  EthereumChainMetadata.md  EthereumTokenMetadata.md  EthereumTransactionReceipt.md  EthereumTransactionRequest.md  ExportedViewingKey.md  FulfillmentCommitment.md  FulfillmentProof.md  FulfillmentProofParams.md  FulfillmentRequest.md  FulfillmentResult.md  (+108 more)
api/type-aliases/: ChainId.md  ComplianceRole.md  DefuseAssetId.md  EIP1193Event.md  EthereumChainIdType.md  EthereumWalletName.md  HardwareConnectionStatus.md  HardwareErrorCodeType.md  HardwareWalletType.md  Hash.md  HexString.md  LedgerModel.md  PaymentPurpose.md  PaymentStatusType.md  ProofFramework.md  ProposalStatusType.md  ProposalType.md  ReportFormat.md  ReportStatusType.md  ReportType.md  SolanaCluster.md  SolanaWalletName.md  SolverEvent.md  SolverEventListener.md  StablecoinSymbol.md  TransportType.md  TreasuryRole.md  TrezorModel.md  WalletAdapterFactory.md  WalletEvent.md  (+9 more)
docs/: API-MIGRATION.md  ARCHITECTURE.md  CODE_ROAST_REPORT.md  DEPLOYMENT.md  INVENTORY.md  MIGRATION-GUIDE.md  PRODUCTION_READINESS_REPORT.md  TEST_COVERAGE_AUDIT.md  WHITEPAPER.md  dashboard.html  production-readiness-report.md  sentry-alerts.md  uptime-monitoring.md
examples/: README.md  zcash-connection.ts
programs/sip-privacy/: AUDIT.md  Anchor.toml  Cargo.toml  README.md  SECURITY_CHECKLIST.md  package-lock.json  package.json
programs/sip-privacy/docs/: AUDIT-SCOPE.md  SECURITY.md  THREAT-MODEL.md
programs/sip-privacy/programs/sip-privacy/: Cargo.toml
programs/sip-privacy/programs/sip-privacy/src/: lib.rs
programs/sip-privacy/programs/sip-privacy/src/commitment/: mod.rs
programs/sip-privacy/programs/sip-privacy/src/zk_verifier/: mod.rs
programs/sip-privacy/scripts/: initialize-mainnet.ts  initialize.ts
programs/sip-privacy/sunspot/: .gitignore  README.md
programs/sip-privacy/sunspot/scripts/: compile.sh  deploy.sh  prove.sh  setup.sh
programs/sip-privacy/tests/: sip-privacy.ts
programs/sipher-vault/programs/sipher-vault/: Cargo.toml
programs/sipher-vault/programs/sipher-vault/src/: constants.rs  errors.rs  lib.rs  state.rs
research/m19-proof-composition/halo2-poc/: Cargo.toml  README.md
research/m19-proof-composition/halo2-poc/src/: circuit.rs  commitment.rs  main.rs  recursion.rs
scripts/: generate-proof-fixture.ts  run-benchmarks.js  validate-circuits.js
sdks/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/sip_protocol/: __init__.py  commitment.py  crypto.py  optimizations.py  privacy.py  stealth.py  types.py
sdks/python/tests/: __init__.py  test_sip_protocol.py
sdks/rust/: Cargo.toml  README.md  SPEC-COMPLIANCE.md
sdks/rust/src/: commitment.rs  crypto.rs  error.rs  lib.rs  optimizations.rs  privacy.rs  stealth.rs  types.rs
secrets/: README.md
(+408 files in other folders)
