[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Workaround: Pin blake3 to 1.5.5 to avoid constant_time_eq 0.4.x
# which requires Rust edition2024 (not supported by Solana platform-tools v1.52)
# See: https://github.com/sip-protocol/sip-protocol/issues/780
[workspace.dependencies]
blake3 = "=1.5.5"
constant_time_eq = "=0.3.1"
