[package]
name = "sip-privacy"
version = "0.1.0"
description = "SIP Protocol - Privacy-preserving shielded transfers on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sip_privacy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
bytemuck = { version = "1.20.0", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
